Sat Mar 14 18:07:23 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* enum.c: [DOC] Fixes Enumerable#member? documentation
	  [fix GH-756][ci skip] Patch by @shamanime

Sat Mar 14 12:23:53 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): use d_type to reduce lstat system calls.

	* win32/dir.h (struct direct): add d_type instead of d_isdir and
	  d_isrep.  SYMLINKD is unreliable, since the target can be
	  replaced after a link was created.

	* win32/win32.c (readdir_internal): set d_type.

Sat Mar 14 02:14:50 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (primary): empty parentheses at cmdarg can be null.
	  [ruby-core:68477] [Bug #10957]

Fri Mar 13 15:04:36 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_close): don't raise on dobule
	  close for consistent to IO#close.

Fri Mar 13 15:03:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_close_read, rb_io_close_write): don't raise after
	  close same as IO#close.

Fri Mar 13 12:29:07 2015  Tanaka Akira  <akr@fsij.org>

	* test/readline/test_readline.rb: Restore environment variables:
	  COLUMNS LINES

Fri Mar 13 11:37:46 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/fiddle/extconf.rb: needs --enable-shared when linked to
	  libruby or fiddle.so.  since --with-static-linked-ext does no
	  longer link extensions to ruby program with --enable-shared, the
	  only combination needs --enable-static is --disable-shared and
	  --with-static-linked-ext.  [ruby-dev:48901] [Bug #10960]

Fri Mar 13 07:02:20 2015  Eric Wong  <e@80x24.org>

	* ext/socket/init.c (rsock_s_accept_nonblock): use rb_hash_lookup2
	* ext/openssl/ossl_ssl.c (get_no_exception): new function
	  (ossl_ssl_accept_nonblock): use get_no_exception
	  (ossl_ssl_read_internal): ditto
	  (ossl_ssl_write_nonblock): ditto
	  [ruby-core:68511]

Fri Mar 13 07:01:38 2015  Eric Wong  <e@80x24.org>

	* ext/openssl/ossl_ssl.c: predefine wait_*able symbols
